# adversarially-learned-interpolants

./: .gitattributes  .gitignore  README.md  TRAINING.md  knot_distribution.py  learnable_interpolant.py  learnable_interpolants.py  linear_interpolants.py  losses.py  plots.py  pyproject.toml  run-ali.sh  run_cell_mfm.sh  run_st_mfm.sh  sweep-ali-params-cite-v2.sh  sweep-ali-params-cite.sh  sweep-ali-params.sh  train_ali.py  train_ali_cfm.py  train_mfm_cell.py  train_mfm_st.py  train_ot_cfm.py  trimodal_distribution.py
.mplconfig/: fontlist-v390.json
Drosophila/: infer_mmot.py  main.py  utils.py
Mixture-FMLs-kirill_single_cell_experiments/ali_cfm/: compute_metrics_ali.py  data.py  interpolants.py  train_ali.py  train_cfm.py  utils.py
Mixture-FMLs-kirill_single_cell_experiments/ali_cfm/configs/: ali.yaml
ST/: infer_cubic_splines.py  infer_mmot.py  learn_interpolants.py  train_ali.py  train_ot_cfm.py  train_vector_field.py  utils.py
ST/configs/: ali.yaml
ali_cfm/: cubic_fm.py  data_utils.py  land_metric.py  loggin_and_metrics.py  nets.py
ali_cfm/cell_tracking/: create_dataset.py  data_animation.py  plot_trajectories.py  visualize_single_frame.py
ali_cfm/distributions/: knot_distribution.py
ali_cfm/scripts/: train_ali_single_cell.py  train_ali_st.py  train_ali_tracking.py  train_cfm_st.py  train_cfm_tracking.py  train_mfm_st.py  train_mfm_tracking.py
ali_cfm/spatial_transcriptomics/: utils.py
ali_cfm/training/: __init__.py  training_funcs.py  training_utils.py
cell_tracking/: cell_tracking_utils.py  create_dataset.py  train_ali.py  train_ot_cfm.py  visualize_single_frame.py
configs/: cfm.yaml  debug.yaml
configs/cell_tracking/: cell_tracking_cfg.yaml
configs/single_cell/100d/: cite-100D.yaml  multi-100D.yaml
configs/single_cell/50D/: cite-50D.yaml  multi-50D.yaml
configs/single_cell/5D/: cite-5D.yaml  multi-5D.yaml
data/Drosophila/: data_preprocessing.ipynb
data/ST_images/: common_reference_alignment.py  visualize_aligned_tumor_clusters.py  visualize_clusters.py
data/boundaries/: plot_tme_data.py
old-oskar/: train_ali.py  train_ali_cfm.py
rotating_MNIST/: create_dataset.py  mnist_utils.py  train_ali.py  train_mfm.py  train_ot_cfm.py
rotating_MNIST/configs/: ali.yaml  ot_cfm.yaml
scripts/: recompute_emd.py  recompute_trajectories.py  run_cell_mfm.sh
toy_experiment/: generate_circle_data.py  generate_rotating_gaussians.py  generate_tme_data.py  main.py  main_tme.py  plot_cubic_splines.py
